tests/fixtures/errors/postprocess/variants/wrong-default-export/postprocess.cjs
console.log("This is stdout\non two lines");
module.exports = {
  postprocess: function () {},
};
console.error("This is stderr");
